Added MTools about page

--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -44,6 +44,7 @@
                 <a class="nav-link" href="/MTools/download/EXE" style="color: #BBE1FA !important">Download EXE</a>
                 <a class="nav-link" href="/MTools/download/JAR" style="color: #BBE1FA !important">Download JAR</a>
                 <a class="nav-link" href="https://github.com/merive/MTools" style="color: #BBE1FA !important">GitHub</a>
+                <a class="nav-link" href="/MTools/about" style="color: #BBE1FA !important">About MTools</a>
                 <a class="nav-link" href="/" style="color: #BBE1FA !important">Back</a>
             </div>
         </div>
