Added P1MT About page

--- a/templates/bases/P1MT.html
+++ b/templates/bases/P1MT.html
@@ -43,6 +43,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="https://github.com/merive/Press1MTimes"
                    style="color: #2C2C2C !important; font-size: 20px">GitHub</a>
+                <a class="nav-link" href="/P1MT/about" style="color: #2C2C2C !important; font-size: 20px">About P1MT</a>
                 <a class="nav-link" href="/" style="color: #2C2C2C !important; font-size: 20px">Back</a>
             </div>
         </div>
