Added LinuxSetup About page

--- a/templates/bases/LinuxSetup.html
+++ b/templates/bases/LinuxSetup.html
@@ -43,6 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="https://reddit.com/user/merive_" style="color: #d77020 !important">Reddit</a>
+                <a class="nav-link" href="/LinuxSetup/about" style="color: #d77020 !important">About LinuxSetup</a>
                 <a class="nav-link" href="/" style="color: #d77020 !important">Back</a>
             </div>
         </div>
@@ -54,7 +55,7 @@
 </body>
 <style>
     body {
-        background: #222;
+        background-color: #222;
 
         font-family: 'Open Sans', sans-serif;
         font-size: 16px;
