--- a/templates/bases/SecurePass.html
+++ b/templates/bases/SecurePass.html
@@ -46,6 +46,7 @@
                 </a>
                 <a class="nav-link" href="https://github.com/merive/SecurePass"
                    style="color: #47ed87 !important">GitHub</a>
+                <a class="nav-link" href="/SecurePass/about" style="color: #47ed87 !important">About</a>
                 <a class="nav-link" href="/" style="color: #47ed87 !important">Back</a>
             </div>
         </div>
